...
        if(favoriteCharacters.isEmpty()){
            Text(
                text = stringResource(id = R.string.empty),
                textAlign = TextAlign.Center,
                modifier = Modifier
                    .fillMaxSize()
                    .testTag("Favorite List"),
                style = MaterialTheme.typography.titleLarge.copy(fontWeight = FontWeight.ExtraBold)
            )
        }else{
            Box{
                val scope = rememberCoroutineScope()
                val listState = rememberLazyListState()
...
