...
            val showButton: Boolean by remember {
                derivedStateOf { listState.firstVisibleItemIndex > 0 }
            }
            LazyColumn(
                state = listState,
                contentPadding = PaddingValues(bottom = 80.dp),
                modifier = modifier.testTag("CharacterList")
            ) {
                if (groupedCharacters.isEmpty()){
                    item{
                        Text(
                        text = stringResource(id = R.string.empty),
                        textAlign = TextAlign.Center,
...
